# csti

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  config_template.py  flake.nix  http_cache.sqlite  main.py  pyproject.toml  shell.nix
.csti/contest/: tasksId
.github/workflows/: python-package.yml  tests.yml
csti/: __main__.py  consts.py
csti/cli/: __init__.py  app.py  cli.py  config.py  contest.py  data_manager.py  exceptions.py  general_config_tuner.py  print.py  state.py  task.py  utils.py
csti/config/: __init__.py  config.py  field.py  general.py  global_config.py  utils.py
csti/contest/: __init__.py  api.py  contest.py  contest_interface.py  exceptions.py  group.py  interface.py  manager.py  solution.py  task.py
csti/contest_env/: contest_env.py  data_manager.py  data_storage.py  exceptions.py
csti/contest_systems/: manager.py
csti/data_storage/: __init__.py  data_storage.py  exceptions.py  field.py  template.py  template_member.py
csti/etc/: app.py  consts.py  language.py  locale.py  settings.py  utils.py
csti/program/: __init__.py  context_managers.py  make.py  program.py  test_result.py  utils.py
csti/program_view/: __init__.py  exceptions.py  (+5 more)
flake/: dev_shells.nix  packages.nix
mz6/: mz1.c  mz2.c  mz3.c  mz4.c  mz5.c
nix/: all.nix  asm.nix  c.nix  packages.nix  templates.nix  treefmt.nix
src/: ContestInterface.py  config.py  consts.py  contest_interface.py  exceptions.py  tester.py
tests/: contest_parser_test.py  task_parser_test.py  test_contest_parser.py  test_program.py  test_task_parser.py  testcase.py
(+194 files in other folders)
