[tool.poetry]
name = "csti"
version = "0.1.0"
description = ""
authors = ["firefenix <kitotavrik.media@gmail.com>"]
readme = "README.md"
# license = "BSD"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
platformdirs = "^4.2.2"
inquirerpy = "^0.3.4"
click = "^8.1.7"
termcolor = "^2.4.0"
# Ejudje.
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.scripts]
csti = "csti.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
